B&L QA/objects/Account_Previous_Year_Info__c.object
<CustomObject>
    <description>Account Previous year Information will be used to capture Last years statistics of the Account i.e. BnL products usage, competitor products usage, BnL Equipment base and competitor equipment base.</description>
    <fields>
        <fullName>Account_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Profile</label>
        <referenceTo>Account_Profile__c</referenceTo>
        <relationshipName>Account_Additional_Information1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Account_Additional_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accurus__c</fullName>
        <description>APACSU will use this field to identify the number of competitor’s Equipments installed.</description>
        <label>Accurus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acrysof_3_Piece__c</fullName>
        <label>Acrysof 3 Piece</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acrysof_IQ__c</fullName>
        <description>APACSU field to indentify number of Competitor IOL used in the last year.</description>
        <label>Acrysof IQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acrysof_ReStor__c</fullName>
        <description>APACSU field to indentify number of Competitor IOL used in the last year.</description>
        <label>Acrysof ReStor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acrysof_Single_Piece__c</fullName>
        <label>Acrysof Single Piece</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acrysof_Toric__c</fullName>
        <description>APACSU field to indentify number of Competitor IOL used in the last year.</description>
        <label>Acrysof Toric</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Akreos_AO__c</fullName>
        <description>APACSU field to indentify number of B+L IOL used in the last year.</description>
        <label>Akreos AO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Akreos_Adapt__c</fullName>
        <description>APACSU field to indentify number of B+L IOL used in the last year.</description>
        <label>Akreos Adapt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Akreos_MI_60__c</fullName>
        <description>APACSU field to indentify number of B+L IOL used in the last year.</description>
        <label>Akreos MI-60</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>B_L_Share__c</fullName>
        <formula>(Akreos_MI_60__c + Akreos_AO__c + Akreos_Adapt__c + Envista__c + LI61SE__c + LI61AO__c )/(Akreos_MI_60__c + Akreos_AO__c + Akreos_Adapt__c + Envista__c + LI61SE__c + LI61AO__c +Acrysof_Single_Piece__c + Hoya__c + Acrysof_3_Piece__c + Sensar__c + Acrysof_IQ__c +  Tecnis_Multifocal__c + Acrysof_Toric__c + ReZoom__c + Canon_Staar__c + Others__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>B+L Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CX_1000__c</fullName>
        <description>APACSU will use this field to identify the number of Equipments installed.</description>
        <label>CX 1000</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CX_2000__c</fullName>
        <description>APACSU will use this field to identify the number of Equipments installed.</description>
        <label>CX 2000</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CX_3000__c</fullName>
        <description>APACSU will use this field to identify the number of Equipments installed.</description>
        <label>CX 3000</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Canon_Staar__c</fullName>
        <description>APACSU field to indentify number of Competitor IOL used in the last year.</description>
        <label>Canon-Staar</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Compact__c</fullName>
        <description>APACSU will use this field to identify the number of competitor’s Equipments installed.</description>
        <label>Compact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Constellation__c</fullName>
        <description>APACSU will use this field to identify the number of competitor’s Equipments installed.</description>
        <label>Constellation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Envista__c</fullName>
        <label>Envista</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hospital_Beds__c</fullName>
        <description>This is to capture the number of Beds available at the hospital.</description>
        <label>Hospital Beds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hoya__c</fullName>
        <description>APACSU field to indentify number of Competitor IOL used in the last year.</description>
        <label>Hoya</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Infiniti__c</fullName>
        <description>APACSU will use this field to identify the number of competitor’s Equipments installed.</description>
        <label>Infiniti</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LI61AO__c</fullName>
        <description>APACSU field to indentify number of B+L IOL used in the last year.</description>
        <label>LI61AO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LI61SE__c</fullName>
        <description>APACSU field to indentify number of B+L IOL used in the last year.</description>
        <label>LI61SE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LY_Cataract_Procedures_Done__c</fullName>
        <description>APACSU field to capture the number of VR procedures done in the previous year.</description>
        <label>LY: Cataract Procedures Done</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LY_FIOL_Unit__c</fullName>
        <description>APACSU would use this field to track number of FIOL Units used in the previous year.</description>
        <label>LY: FIOL Unit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LY_VR_Procedures_Done__c</fullName>
        <description>APACSU field to capture the number of VR procedures done in the previous year.</description>
        <label>LY: VR Procedures Done</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Laureatte__c</fullName>
        <description>APACSU will use this field to identify the number of competitor’s Equipments installed.</description>
        <label>Laureatte</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legacy__c</fullName>
        <description>APACSU will use this field to identify the number of competitor’s Equipments installed.</description>
        <label>Legacy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Millenium__c</fullName>
        <label>Millenium</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Cataract_Surgeons__c</fullName>
        <description>APACSU would use this field to record the number of cataract surgeons.</description>
        <label>Number of Cataract Surgeons</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_OT__c</fullName>
        <description>This is to capture the  “Number of Operating Rooms” available at the hospital.</description>
        <label>Number of OT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Ophthalmologists__c</fullName>
        <description>This is to capture the Number of Ophthalmologists available at the hospital.</description>
        <label>Number of Ophthalmologists</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_VR_Surgeons__c</fullName>
        <description>APACSU would use this field to record the number of VR surgeons.</description>
        <label>Number of VR Surgeons</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Others_Equipment__c</fullName>
        <description>APACSU will use this field to identify the number of competitor’s Equipments installed.</description>
        <label>Others (Equipment)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Others__c</fullName>
        <description>APACSU field to indentify number of Competitor IOL used in the last year.</description>
        <label>Others</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMMA__c</fullName>
        <description>APACSU field to indentify number of B+L IOL used in the last year.</description>
        <label>PMMA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Premiere__c</fullName>
        <description>APACSU will use this field to identify the number of Equipments installed.</description>
        <label>Premiere</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prot_g__c</fullName>
        <description>APACSU will use this field to identify the number of Equipments installed.</description>
        <label>Protégé</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReZoom__c</fullName>
        <description>APACSU field to indentify number of Competitor IOL used in the last year.</description>
        <label>ReZoom</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sensar__c</fullName>
        <description>APACSU field to indentify number of Competitor IOL used in the last year.</description>
        <label>Sensar</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Signature__c</fullName>
        <description>APACSU will use this field to identify the number of competitor’s Equipments installed.</description>
        <label>Signature</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Souverign__c</fullName>
        <description>APACSU will use this field to identify the number of competitor’s Equipments installed.</description>
        <label>Souverign</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stellaris_PC__c</fullName>
        <label>Stellaris PC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stellaris__c</fullName>
        <description>APACSU will use this field to identify the number of Equipments installed.</description>
        <label>Stellaris</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tecnis_Multifocal__c</fullName>
        <description>APACSU field to indentify number of Competitor IOL used in the last year.</description>
        <label>Tecnis Multifocal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tecnis__c</fullName>
        <description>APACSU field to indentify number of Competitor IOL used in the last year.</description>
        <label>Tecnis</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Account Previous Year Info</label>
    <nameField>
        <label>Account Previous Year Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Previous Year Info</pluralLabel>
    <recordTypes>
        <fullName>APACSU_Account_Previous_Year_Info</fullName>
        <active>true</active>
        <description>APACSU record type to allow editing details of account related to previous year.</description>
        <label>APACSU Account Previous Year Info</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>